--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -635,6 +635,11 @@ body.material_login {
   padding: 1rem;
   opacity: 1;
   transition: .2s;
+  @media #{$small-and-down} {
+    div.collapsible-header {
+      margin-bottom: 0;
+    }
+  }
   .collapsible-header {
     border: none;
     padding: 0;
